# pacific-emis-teacher-registration

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  manage.py  my_permissions.txt  pyproject.toml  requirements.txt
accounts/: account_adapter.py  apps.py  signals.py  urls.py  views.py
core/: admin.py  constants.py  context_processors.py  dateformat.py  decorators.py  emails.py  forms.py  mixins.py  models.py  permissions.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_add_staff_type_field.py  0003_delete_teacher.py  0004_alter_schoolstaffassignment_job_title.py  0005_schoolstaff_address_line_1_and_more.py  0006_educationinstitution_and_more.py  0007_alter_schoolstaff_nationality.py  0008_alter_stafftrainingrecord_focus_and_more.py  0009_alter_stafftrainingrecord_focus_and_more.py  0010_remove_schoolstaff_address_line_1_and_more.py  0011_remove_schoolstaff_teaching_certificate_number_and_more.py  0012_schoolstaff_teacher_registration_number.py  0013_staffteachingduty.py  0014_schoolstaff_teacher_registration_status.py  (+15 more)
docs/: color_schemes_preview.html
integrations/: admin.py  emis_client.py  models.py
pacemis_teacher_registration/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
requirements-documents/: Current Teacher Application Form.docx  New Teacher Application form.docx  assignment-fields-backfill-plan.md  refined-requirements-plan.md  refined-requirements.md
teacher_registration/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  utils.py  views.py
templates/: base.html  dashboard.html
(+113 files in other folders)
